fixed display of services page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -402,7 +402,7 @@
   </nav>
 </div>
 
-<div class="row center-align" style="margin-bottom: 20px">
+<div class="row center-align" id="logo_display">
   <div class="col s12">
     <a href="/"><img id="logo-main" src="/images/lean-toLogo.svg" alt="logo" srcset=""></a>
   </div>
