--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -1,6 +1,7 @@
 <div id="services">
 
-    {{!-- brand container --}}
+    {{!-- Brand Container --}}
+
     <br>
     <br>
     <div class="container">
@@ -31,30 +32,31 @@
             </div>
         </div>
 
-        {{!-- cards --}}
+        {{!-- Available Services --}}
+
         <div class="row">
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/babysitting.jpg">
-                        <span class="card-title" id="title">Babysitting</span>
                     </div>
+                    <span class="card-title title">Babysitting</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/errands2.jpg">
-                        <span class="card-title" id="title">Errands</span>
                     </div>
+                    <span class="card-title title">Errands</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/groceries2.jpg">
-                        <span class="card-title" id="title">Groceries</span>
                     </div>
+                    <span class="card-title title">Groceries</span>
                 </div>
             </div>
         </div>
@@ -63,24 +65,24 @@
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/houseprojects.jpg">
-                        <span class="card-title" id="title">Home Projects</span>
                     </div>
+                    <span class="card-title title">Home Projects</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/housekeeping.jpg">
-                        <span class="card-title" id="title">Housekeeping</span>
                     </div>
+                    <span class="card-title title">Housekeeping</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/petcare.jpg">
-                        <span class="card-title" id="title">Pet Care</span>
                     </div>
+                    <span class="card-title title">Pet Care</span>
                 </div>
             </div>
         </div>
@@ -89,30 +91,31 @@
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/transportation.jpg">
-                        <span class="card-title" id="title">Transportation</span>
                     </div>
+                    <span class="card-title title">Transportation</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/yardwork2.jpg">
-                        <span class="card-title" id="title">Yardwork</span>
                     </div>
+                    <span class="card-title title">Yardwork</span>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card" id="service_image">
                     <div class="card-image">
                         <img src="/images/moving.jpg">
-                        <span class="card-title" id="title">Movers</span>
                     </div>
+                    <span class="card-title title">Movers</span>
                 </div>
             </div>
         </div>
     </div>
 
     {{!-- Request services signup --}}
+
     <div class="row container">
         <div class="row">
             <div class="col s12 m6">
@@ -134,6 +137,7 @@
             </div>
 
             {{!-- Request to be a volunteer --}}
+
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-content grey-darken-3-text">
@@ -165,7 +169,8 @@
     </div>
 </div>
 
-<!-- Request modal -->
+{{!-- Request Modal --}}
+
 <div id="modal1" class="modal">
     <div class="modal-content">
         <h4>Request services:</h4>
@@ -325,7 +330,8 @@
     </div>
 </div>
 
-<!-- Volunteer modal -->
+{{!-- Volunteer Modal --}}
+
 <div id="modal2" class="modal">
     <div class="modal-content">
         <h4>Request to be a volunteer:</h4>
