--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,12 +13,16 @@ body, html {
 #logo-main {
   display: inline-block;
   max-width:180px;
-  /* max-height:95px; */
   width: auto;
   height: auto;
 }
 
-/* ==================================== nav styling ==================================== */
+#logo_display {
+  overflow: visible;
+  margin-bottom: 20px;
+}
+
+/* ==================================== Nav Styling ==================================== */
 #first-nav {
   background-color: #FFFBE8;
   height: 40px;
@@ -53,7 +57,6 @@ nav ul a:hover {
 
 nav ul.left {
   padding-left: 20px;
-  /* margin: 0 auto; */
 }
 
 nav ul.right {
@@ -64,7 +67,7 @@ li {
   height: 50px;
 }
 
-/* ==================================== slider ==================================== */
+/* ==================================== Slider ==================================== */
 .slider {
   margin: 20px 0 20px 0;
   clear: left;
@@ -90,7 +93,7 @@ li {
   border-bottom: transparent;
 }
 
-/* ==================================== headers ==================================== */
+/* ==================================== Headers ==================================== */
 h1 {
   margin: 0 auto;
 }
@@ -102,13 +105,11 @@ h1.main {
 
 h3 {
   font-size: 24px;
-  /* border-top: rgba(105, 105, 105, 0.61) solid 1px;
-  border-bottom: rgba(105, 105, 105, 0.61) solid 1px; */
   padding: 10px 0 10px 0;
   color: rgb(105, 105, 105);
 }
 
-/* ==================================== etc. ==================================== */
+/* ==================================== Etc. ==================================== */
 a {
   color: rgb(105, 105, 105);
 }
@@ -125,43 +126,22 @@ a {
   padding-bottom: 10px;
 }
 
-#title {
+.title {
   background-color: white;
   opacity: 0.65;
   text-align: center;
-  padding: 35px 20px 0;
+  padding: 20px 20px 20px 20px;
   vertical-align: middle;
   font-weight: 500;
   color: rgb(59, 59, 59);;
   position: absolute;
+  height: fit-content;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
 }
 
-/* modals */
-.modal-content h4 {
-  color: rgb(105, 105, 105);
-}
-
-.modal-content h6 {
-   color: black;
-}
-
-.article-card {
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.article-card, #first-nav, .card-panel {
-  -webkit-box-shadow: none;
-}
-
-.modal-close {
-  background-color: #70597C;
-}
-    
 p, h6 {
   height: 100%;
   font-weight: 500;
@@ -178,16 +158,44 @@ h5 {
   line-height: 1.3;
 }
 
-/* ==================================== footer ==================================== */
-/* .page-footer {
-  background-color: #FFFBE8;
-  padding-top: 0;
+.article-card {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-.footer-copyright {
-  color: rgb(105, 105, 105) !important;
-} */
+.article-card, #first-nav, .card-panel {
+  -webkit-box-shadow: none;
+}
 
+#request_volunteer {
+  color: whitesmoke;
+  font-size: 30px;
+  text-align: center;
+  padding: 150px 0;
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%,-50%);
+}
+
+#request-btn, #volunteer-btn {
+  background-color: #70597C;
+}
+
+/* ==================================== Modal ==================================== */
+.modal-close {
+  background-color: #70597C;
+}
+
+.modal-content h6 {
+  color: black;
+}
+
+.modal-content h4 {
+  color: rgb(105, 105, 105);
+}
+
+/* ==================================== Footer ==================================== */
 .footer {
   left: 0;
   bottom: 0;
@@ -247,19 +255,4 @@ h5 {
   background-size: cover;
   position: relative;
   margin-top: 10px;
-}
-
-#request_volunteer {
-  color: whitesmoke;
-  font-size: 30px;
-  text-align: center;
-  padding: 150px 0;
-  position: absolute;
-  top: 50%;
-  left: 35%;
-  transform: translate(-50%,-50%);
-}
-
-#request-btn, #volunteer-btn {
-  background-color: #70597C;
 }
