services.js errors mostly fixed, data not posting yet

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -186,8 +186,8 @@
             <form class="col s12" id="request_services">
                 <div class="row">
                     <div class="input-field col s6">
-                        <input placeholder="Jane" id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name: </label>
+                        <input placeholder="Jane" id="req-first_name" type="text" class="validate">
+                        <label for="req-first_name">First Name: </label>
                     </div>
                     <div class="input-field col s6">
                         <input placeholder="Smith" id="last_name" type="text" class="validate">
@@ -527,7 +527,7 @@
                     </label>
                 </p>
                 <br>
-                <a class="modal-close waves-effect waves-light btn" id="submit_volunteer">Submit</a>
+                <a class="modal-close waves-effect waves-light btn" id="initial-submit_volunteer">Submit</a>
             </form>
         </div>
     </div>
