need to edit  /public/js/user.js to reflect user model html, copied from example.js

--- a/views/volunteer.handlebars
+++ b/views/volunteer.handlebars
@@ -8,9 +8,9 @@
             <strong>ID</strong>: {{volunteer.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{volunteer.text}}</p>
+            <strong>Text</strong>: {{volunteer.vol_name}}</p>
           <p>
-            <strong>Description:</strong> {{volunteer.description}}</p>
+            <strong>Description:</strong> {{volunteer.availability}}</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
