--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -460,6 +460,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/materialize.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/js/services.js"></script>
 {{!-- <script type="text/javascript" src="/js/categories.js"></script> --}}
 
 </html>
