--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -526,6 +526,24 @@
                         <span>Movers</span>
                     </label>
                 </p>
+                <div class="row">
+                    <h6>Would you like to request services or volunteer?</h6>
+                    <div class="col s12">
+                        <p>
+                            <label>
+                                <input id="volunteer-role" class="with-gap" name="role" type="radio" />
+                                <span>Volunteer</span>
+                            </label>
+                        </p>
+                        <p>
+                            <label>
+                                <input id="requester-role" class="with-gap" name="role" type="radio" />
+                                <span>Request Services</span>
+                            </label>
+                        </p>
+                    </div>
+                </div>
+
                 <br>
                 <a class="modal-close waves-effect waves-light btn" id="initial-submit_volunteer">Submit</a>
             </form>
@@ -533,30 +551,48 @@
     </div>
 </div>
 
-{{!-- List of volunteers --}}
-    <div class="row">
-      <div class="col-8 offset-2">
-        {{!-- <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2> --}}
+{{!-- List of all Users --}}
+<div class="row">
+    <div class="col-8 offset-2">
         <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="vol_name">Volunteer Name</label>
-            <input type="text" id="vol_name" class="form-control" aria-describedby="vol_name"
-              placeholder="Enter your name...">
-          </div>
-          <button id="submit_volunteer" class="btn btn-primary float-right">Submit</button>
+            <div class="form-group">
+                <label for="user-name">User Name</label>
+                <input type="text" id="user-name" class="form-control" aria-describedby="first_name"
+                    placeholder="Enter your name...">
+            </div>
+            <button id="submit_user" class="btn btn-primary float-right">Submit</button>
+        </form>
+        <h3>Users:</h3>
+        <ul id="volunteer-list" class="list-group">
+            {{#each users}}
+            <li data-id="{{this.id}}" class="list-group-item">
+                <a href="example/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>
+                <button class="btn btn-danger float-right delete">ｘ</button>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+</div>
+
+{{!-- List of volunteers --}}
+<div class="row">
+    <div class="col-8 offset-2">
+        <form class="clearfix mb-4" action="POST">
+            <div class="form-group">
+                <label for="vol_name">Volunteer Name</label>
+                <input type="text" id="vol_name" class="form-control" aria-describedby="vol_name"
+                    placeholder="Enter your name...">
+            </div>
+            <button id="submit_volunteer" class="btn btn-primary float-right">Submit</button>
         </form>
         <h3>Volunteers:</h3>
         <ul id="volunteer-list" class="list-group">
-          {{#each volunteers}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.vol_name}}, {{this.availabilty}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
+            {{#each volunteers}}
+            <li data-id="{{this.id}}" class="list-group-item">
+                <a href="example/{{this.id}}">{{this.vol_name}}, {{this.availabilty}}</a>
+                <button class="btn btn-danger float-right delete">ｘ</button>
+            </li>
+            {{/each}}
         </ul>
-      </div>
     </div>
-
-<script src="https://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="/js/services.js"></script>
+</div>
