--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -3488,9 +3488,9 @@
     min-height: 1px;
   }
   
-  .row .col[class*="push-"], .row .col[class*="pull-"] {
+  /* .row .col[class*="push-"], .row .col[class*="pull-"] {
     position: relative;
-  }
+  } */
   
   .row .col.s1 {
     width: 8.3333333333%;
