--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -149,13 +149,22 @@ a {
    color: black;
 }
 
-.article-card {
-  margin-top: 50px;
-  margin-bottom: 50px;
+#first-nav, .card-panel, .concept-card {
+  -webkit-box-shadow: none;
 }
 
-.article-card, #first-nav, .card-panel {
+.article-card {
+  margin-bottom: 50px;
   -webkit-box-shadow: none;
+}
+
+.article-card p {
+  font-size: 12px;
+}
+
+.article-card h6 {
+  font-size: 15px;
+  line-height: 1.2;
 }
 
 .modal-close {
@@ -205,7 +214,7 @@ h5 {
 }
 
 /* ==================================== Hero Banner ==================================== */
-#categories-hero-image {
+/* #categories-hero-image {
   background-image: url('../images/womens-health.jpg');
   height: 400px;
   background-position: center;
@@ -213,6 +222,28 @@ h5 {
   background-size: cover;
   position: relative;
   margin-top: 10px;
+} */
+
+#categories-image-section {
+  margin-top: 10px;
+  position: relative;
+  height: 50%;
+  width: 100%;
+}
+
+#categories-image-banner, #categories-image-banner2 {
+  width: 100%;
+  height: 400px;
+}
+
+#image-div1 {
+  padding-left: 0;
+  padding-right: 1px;
+}
+
+#image-div2 {
+  padding-right: 0;
+  padding-left: 1px;
 }
 
 #admin-hero-image {
@@ -260,6 +291,14 @@ h5 {
   transform: translate(-50%,-50%);
 }
 
-#request-btn, #volunteer-btn {
+#request-btn, #volunteer-btn, #card-btn {
   background-color: #70597C;
+}
+
+#article-icon, #service-icon, #community-icon {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
