--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -4,37 +4,37 @@
     {{!-- second "nav" --}}
     <div class="row center-align" style="min-height: 30px" id="sec-nav">
 
-      <div class="mind">
+      <div class="category-btn" id="mind">
         <div class="col s2">
           <a href="/api/categories/women&body">Mind & Body</a>
         </div>
       </div>
 
-      <div class="love">
+      <div class="category-btn" id="love">
         <div class="col s2">
           <a href="/api/categories/intimacy">Love & Intimacy</a>
         </div>
       </div>
 
-      <div class="fertility">
+      <div class="category-btn" id="fertility">
         <div class="col s2">
           <a href="/api/categories/pregnancy">Fertility & Pregnancy</a>
         </div>
       </div>
 
-      <div class="family">
+      <div class="category-btn" id="family">
         <div class="col s2">
           <a href="/api/categories/parenting">Family & Parenting</a>
         </div>
       </div>
 
-      <div class="health">
+      <div class="category-btn" id="health">
         <div class="col s2">
           <a href="/api/categories/women&health">Women’s Health</a>
         </div>
       </div>
 
-      <div class="work">
+      <div class="category-btn" id="work">
         <div class="col s2">
           <a href="/api/categories/women-in-the-workplace">Women in the Workplace</a>
         </div>
@@ -43,15 +43,27 @@
     </div>
 </div>
 
+{{!-- Image Banner --}}
+<div class="row" id="categories-image-section">
+  <div class="col s6 m6" id="image-div1">
+    <img src="/images/parenting2.jpg" id="categories-image-banner">
+  </div>
+  <div class="hero-text" id="categories-hero-text">
+    <h3>Family & Parenting</h3>
+  </div>
+  <div class="col s6 m6" id="image-div2">
+    <img src="/images/parenting3.jpg" id="categories-image-banner2">
+  </div>
+</div>
 
 {{!-- Hero Banner --}}
-<div class="row">
+{{!-- <div class="row">
     <div class="hero-image" id="categories-hero-image">
-      <div class="hero-text">
+      <div class="hero-text" id="categories-hero-text">
         <h3>Women's Health</h3>
       </div>
     </div>
-</div>
+</div> --}}
 
 {{!-- Related Articles Section --}}
 <div class="row results-header">
@@ -62,10 +74,10 @@
 </div>
 
 {{!-- Article Results go here dynamically using API and javascript--}}
-  {{!-- {{#if result.articles}} --}}
   
-  <div class="row container results-body">
-    {{#each result}}
+  <div class="container results-body">
+    <div class="row">
+      {{#each result}}
       <div class="col s12 m6 l4 article-card">
         <a target="blank" href="{{this.url}}">
         <div class="card">
@@ -74,16 +86,17 @@
         </div>
           <div class="card-content center-align">
             <p>{{this.publishedAt}}</p>
-            <span>{{this.title}}</span>
+            <span><h6>{{this.title}}</h6></span>
             <p>By: {{this.author}}</p>
           </div>
         </a>
       </div>
-      <br>
-        {{/each}}
+      {{/each}}
+    </div>
   </div>
 
 
-  {{!-- {{/if}} --}}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/categories.js"></script>
  
 
