--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,44 +6,44 @@
     {{!-- second "nav" --}}
     <div class="row center-align" style="min-height: 30px" id="sec-nav">
 
-      <div class="mind">
+      <div class="category-btn" id="mind">
         <div class="col s2">
-          <a href="/categories">Mind & Body</a>
+          <a href="/api/categories/women&body">Mind & Body</a>
         </div>
       </div>
 
-      <div class="love">
+      <div class="category-btn" id="love">
         <div class="col s2">
-          <a href="/categories">Love & Intimacy</a>
+          <a href="/api/categories/intimacy">Love & Intimacy</a>
         </div>
       </div>
 
-      <div class="fertility">
+      <div class="category-btn" id="fertility">
         <div class="col s2">
-          <a href="/categories">Fertility & Pregnancy</a>
+          <a href="/api/categories/pregnancy">Fertility & Pregnancy</a>
         </div>
       </div>
 
-      <div class="family">
+      <div class="category-btn" id="family">
         <div class="col s2">
-          <a href="/categories">Family & Parenting</a>
+          <a href="/api/categories/parenting">Family & Parenting</a>
         </div>
       </div>
 
-      <div class="health">
+      <div class="category-btn" id="health">
         <div class="col s2">
-          <a href="/categories">Women’s Health</a>
+          <a href="/api/categories/women&health">Women’s Health</a>
         </div>
       </div>
 
-      <div class="work">
+      <div class="category-btn" id="work">
         <div class="col s2">
-          <a href="/categories">Women in the Workplace</a>
+          <a href="/api/categories/women-in-the-workplace">Women in the Workplace</a>
         </div>
       </div>
 
     </div>
-</div>
+  </div>
 
   {{!-- slider --}}
   <div class="slider">
@@ -101,109 +101,104 @@
       </div>
     </div>
 
-    {{!-- cards --}}
+    <div class="row center-align">
+      <h5>What We're About</h5>
+      <hr align="center" width="30%">
+    </div>
+    
     <div class="row">
+      <h6>As a female-led team, our goal is to raise awareness on a variety of women's issues and advocate for women’s
+        health & safety. We provide a safe environment for women and other marginalized groups to find information and ask
+        for non-emergency assistance from their community. We see a world where all of our neighbors have access to
+        supportive community, one where everyone works together to help one another. Our mission is to enhance the lives of
+        those in need by offering our compassion, skills and services to all.
+      </h6>
+    </div>
+  </div>
 
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image">
-            <img src="/images/volunteer-card.jpg">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content">
-            <p>Sample text</p>
-          </div>
-          <div class="card-action">
-            <a href="#">Sample link</a>
-          </div>
+{{!-- About Categories/News --}}
+
+<div class="row container">
+
+  <div class="row center-align">
+    <div class="col s12 m4 concept-card">
+      <img src="/images/article-icon.png" alt="article-icon" id="article-icon">
+      <div class="card">
+        <div class="card-content grey-darken-3-text">
+          <span class="card-title">Explore</span>
+          <p>We provide a dedicated space for women of all ages and allies of women to explore stories, articles, blogs,
+            and advice on a wide range of women’s topics from family planning to health and exercise to women in the
+            workplace. Discover new stories that resonate with you.
+          </p>
+        </div>
+        <div class="card-action">
+          <a class="waves-effect waves-light btn modal-trigger" href="/categories" id="card-btn">Learn More</a>
         </div>
       </div>
-
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image">
-            <img src="/images/errands.jpg">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content">
-            <p>Sample text</p>
-          </div>
-          <div class="card-action">
-            <a href="#">Sample link</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="card">
-          <div class="card-image">
-            <img src="/images/groceries2.jpg">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content">
-            <p>Sample text</p>
-          </div>
-          <div class="card-action">
-            <a href="#">Sample link</a>
-          </div>
-        </div>
-      </div>
-
     </div>
 
+    {{!-- About Services Concept --}}
+
+    <div class="col s12 m4 concept-card">
+      <img src="/images/service-icon.png" alt="service-icon" id="service-icon">
+      <div class="card">
+        <div class="card-content grey-darken-3-text">
+          <span class="card-title">Service</span>
+          <p>We offer a wide range of services you can book with our fully vetted team of volunteers while also providing a
+            safe and secure environment to request assistance. Whether you need your lawn mowed or someone to pick up your
+            groceries or a ride to the clinic, we are here to help!</p>
+        </div>
+        <div class="card-action">
+          <a class="waves-effect waves-light btn modal-trigger" href="/services" id="card-btn">Learn More</a>
+        </div>
+      </div>
+    </div>
+
+    {{!-- About Volunteering --}}
+    <div class="col s12 m4 concept-card">
+      <img src="/images/community-icon.png" alt="community-icon" id="community-icon">
+      <div class="card">
+        <div class="card-content grey-darken-3-text">
+          <span class="card-title">Community</span>
+          <p>Volunteering will give you the chance to create the kind of community you would like to live
+            in. We strive to provide meaningful connections to all and give back to neighbors who need a
+            little help. Find something tailored to your schedule and interests.</p>
+        </div>
+        <div class="card-action">
+          <a class="waves-effect waves-light btn modal-trigger" href="/services" id="card-btn">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
     {{!-- latest posts --}}
-<div class="row latest-posts">
+<div class="row results-header">
     <div class="col s12 center-align">
-        <h5>Latest Posts</h5>
+        <h5>Women in the News</h5>
         <hr align="center" width="30%">
     </div>
 </div>
 
     {{!-- cards, content to be generated dynamically --}}
-  <div class="row container results-body">
-    <div class="col m6 l4">
-      <a href="#" target="_blank">
-      <div class="card article-card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <img src="/images/love-intimacy2.jpg">
+  
+  <div class="container results-body">
+    <div class="row">
+      {{#each result}}
+      <div class="col s12 m6 l6 article-card">
+        <a target="blank" href="{{this.url}}">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img src="{{this.urlToImage}}" alt="article"></div>
         </div>
-        <div class="card-content center-align">
-          <p>June 6, 2019</p><br>
-          <span class="card-title">Title</span>
-          <p>By Author Name</p>
-        </div>
+          <div class="card-content center-align">
+            <p>{{this.publishedAt}}</p>
+            <span><h6>{{this.title}}</h6></span>
+            <p>By: {{this.author}}</p>
+          </div>
+        </a>
       </div>
-      </a>
-    </div>
- 
-    <div class="col m6 l4">
-      <a href="#" target="_blank">
-      <div class="card article-card">
-        <div class="card-image">
-          <img src="/images/love-intimacy2.jpg">
-        </div>
-        <div class="card-content center-align">
-          <p>June 6, 2019</p><br>
-          <span class="card-title">Title</span>
-          <p>By Author Name</p>
-        </div>
-      </div>
-      </a>
-    </div>
-
-    <div class="col m6 l4">
-      <a href="#" target="_blank">
-      <div class="card article-card">
-        <div class="card-image">
-          <img src="/images/love-intimacy2.jpg">
-        </div>
-        <div class="card-content center-align">
-          <p>June 6, 2019</p><br>
-          <span class="card-title">Title</span>
-          <p>By Author Name</p>
-        </div>
-      </div>
-      </a>
+      {{/each}}
     </div>
   </div>
 
