--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -114,6 +114,27 @@
         </div>
     </div>
 
+    {{!-- User account signup --}}
+
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div class="card">
+                    <div class="card-content grey-darken-3-text">
+                        <span class="card-title">Create a User Account</span>
+                        <p>If you're looking to sign up to be a volunteer or request services, start here and become a
+                            Lean-To user!</p>
+                    </div>
+                    <div class="card-action">
+                        <a class="waves-effect waves-light btn modal-trigger" href="#modal-user-form"
+                            id="user-btn">Sign-up!</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     {{!-- Request services signup --}}
 
     <div class="row container">
@@ -166,6 +187,125 @@
                 <p id="request_volunteer">Request services or volunteer today!</p>
             </div>
         </div>
+    </div>
+</div>
+
+{{!-- User Modal --}}
+
+<div id="modal-user-form" class="modal">
+    <h4>Become a User:</h4>
+    <div class="row">
+        <div class="col s12">
+            <h6>
+                You will need to create a user account to be able to sign up to volunteer or request services.
+            </h6>
+        </div>
+    </div>
+    <br>
+    <h4>Contact Information</h4>
+    <div class="row">
+        <form class="col s12" id="user-form">
+            <div class="row">
+                <div class="input-field col s6">
+                    <input placeholder="Jane" id="user-first-name" type="text" class="validate">
+                    <label for="user-first-name">First Name: </label>
+                </div>
+                <div class="input-field col s6">
+                    <input placeholder="Smith" id="user-last-name" type="text" class="validate">
+                    <label for="user-last-name">Last Name: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input placeholder="123 Main Street" id="address" type="text" class="validate">
+                    <label for="address">Address: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input placeholder="Apt. 137" id="address-2" type="text" class="validate">
+                    <label for="address-2">Address: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s3">
+                    <input placeholder="Kansas City" id="city" type="text" class="validate">
+                    <label for="city">City: </label>
+                </div>
+                <div class="input-field col s3">
+                    <input placeholder="Kansas" id="state" type="text" class="validate">
+                    <label for="state">State: </label>
+                </div>
+                <div class="input-field col s3">
+                    <input placeholder="66012" id="zip-code" type="text" class="validate">
+                    <label for="zip-code">Zip Code: </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s3">
+                    <input placeholder="123-456-7890" id="phone-number" type="text" class="validate">
+                    <label for="phone-number">Phone Number: </label>
+                </div>
+                <div class="input-field col s3">
+                    <input placeholder="email@something.com" id="email" type="text" class="validate">
+                    <label for="email">Email: </label>
+                </div>
+                <div class="input-field col s3">
+                    <input placeholder="01/01/2001" id="birthday" type="text" class="validate">
+                    <label for="birthday">Date of Birth: </label>
+                </div>
+            </div>
+            <div class="row">
+                <h6>What pronouns do you prefer?</h6>
+                <div class="col s12">
+                    <p>
+                        <label>
+                            <input id="male" class="with-gap" name="gender" type="radio" />
+                            <span>He/Him</span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input id="female" class="with-gap" name="gender" type="radio" />
+                            <span>She/Her</span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input id="non-binary" class="with-gap" name="gender" type="radio" />
+                            <span>They/Them</span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input id="denies" class="with-gap" name="gender" type="radio" />
+                            <span>Prefer not to disclose</span>
+                        </label>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <h6>Do you want to volunteer or request services:</h6>
+                <div class="col s12">
+                    <p>
+                        <label>
+                            <input id="volunteer-chosen" class="with-gap" name="role" type="radio" />
+                            <span>Volunteer</span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input id="request-services-chosen" class="with-gap" name="role" type="radio" />
+                            <span>Request Services</span>
+                        </label>
+                    </p>
+                    <p id="append-radios-checkmarks">
+
+                    </p>
+                </div>
+            </div>
+            <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
+        </form>
     </div>
 </div>
 
@@ -532,24 +672,6 @@
                         <span>Movers</span>
                     </label>
                 </p>
-                <div class="row">
-                    <h6>Would you like to request services or volunteer?</h6>
-                    <div class="col s12">
-                        <p>
-                            <label>
-                                <input id="volunteer-role" class="with-gap" name="role" type="radio" />
-                                <span>Volunteer</span>
-                            </label>
-                        </p>
-                        <p>
-                            <label>
-                                <input id="requester-role" class="with-gap" name="role" type="radio" />
-                                <span>Request Services</span>
-                            </label>
-                        </p>
-                    </div>
-                </div>
-
                 <br>
                 <a class="modal-close waves-effect waves-light btn" id="initial-submit_volunteer">Submit</a>
             </form>
@@ -585,8 +707,8 @@
     <div class="col-8 offset-2">
         <form class="clearfix mb-4" action="POST">
             <div class="form-group">
-                <label for="vol_name">Volunteer Name</label>
-                <input type="text" id="vol_name" class="form-control" aria-describedby="vol_name"
+                <label for="vol-name">Volunteer Name</label>
+                <input type="text" id="vol-name" class="form-control" aria-describedby="vol-name"
                     placeholder="Enter your name...">
             </div>
             <button id="submit_volunteer" class="btn btn-primary float-right">Submit</button>
