dynamically generating js in user form

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -299,10 +299,11 @@
                             <span>Request Services</span>
                         </label>
                     </p>
-                    <p id="append-radios-checkmarks">
-
-                    </p>
                 </div>
+            </div>
+            <div class="row">
+                <h6>In which areas are you best suited to volunteer?</h6>
+                <div class="col s12" id="append-radios-checkmarks"></div>
             </div>
             <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
         </form>
