--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -158,7 +158,7 @@ h5 {
   line-height: 1.3;
 }
 
-#first-nav, .card-panel, .concept-card {
+#first-nav, .card-panel, .concept-card, .request-card {
   -webkit-box-shadow: none;
 }
 
