--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -121,9 +121,9 @@
 <div class="row container">
 
   <div class="row center-align">
-    <div class="col s12 m4 concept-card">
+    <div class="col s12 m4">
       <img src="/images/article-icon.png" alt="article-icon" id="article-icon">
-      <div class="card">
+      <div class="card concept-card">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Explore</span>
           <p>We provide a dedicated space for women of all ages and allies of women to explore stories, articles, blogs,
@@ -131,7 +131,7 @@
             workplace. Discover new stories that resonate with you.
           </p>
         </div>
-        <div class="card-action">
+        <div class="card-action" style="border:none">
           <a class="waves-effect waves-light btn modal-trigger" href="/categories" id="card-btn">Learn More</a>
         </div>
       </div>
@@ -139,32 +139,32 @@
 
     {{!-- About Services Concept --}}
 
-    <div class="col s12 m4 concept-card">
+    <div class="col s12 m4">
       <img src="/images/service-icon.png" alt="service-icon" id="service-icon">
-      <div class="card">
+      <div class="card concept-card">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Service</span>
           <p>We offer a wide range of services you can book with our fully vetted team of volunteers while also providing a
             safe and secure environment to request assistance. Whether you need your lawn mowed or someone to pick up your
             groceries or a ride to the clinic, we are here to help!</p>
         </div>
-        <div class="card-action">
+        <div class="card-action" style="border:none">
           <a class="waves-effect waves-light btn modal-trigger" href="/services" id="card-btn">Learn More</a>
         </div>
       </div>
     </div>
 
     {{!-- About Volunteering --}}
-    <div class="col s12 m4 concept-card">
+    <div class="col s12 m4">
       <img src="/images/community-icon.png" alt="community-icon" id="community-icon">
-      <div class="card">
+      <div class="card concept-card">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Community</span>
           <p>Volunteering will give you the chance to create the kind of community you would like to live
             in. We strive to provide meaningful connections to all and give back to neighbors who need a
             little help. Find something tailored to your schedule and interests.</p>
         </div>
-        <div class="card-action">
+        <div class="card-action" style="border:none">
           <a class="waves-effect waves-light btn modal-trigger" href="/services" id="card-btn">Learn More</a>
         </div>
       </div>
