--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -119,7 +119,7 @@
     <div class="row container">
         <div class="row">
             <div class="col s12 m6">
-                <div class="card">
+                <div class="card request-card">
                     <div class="card-content grey-darken-3-text">
                         <span class="card-title">Request Assistance</span>
                         <p>Our job is to raise awareness and advocate for women's health and safety. With this in mind,
@@ -129,7 +129,7 @@
                             up
                             your groceries, we are here to help!</p>
                     </div>
-                    <div class="card-action">
+                    <div class="card-action" style="border:none">
                         <a class="waves-effect waves-light btn modal-trigger" href="#modal1"
                             id="request-btn">Sign-up!</a>
                     </div>
@@ -139,7 +139,7 @@
             {{!-- Request to be a volunteer --}}
 
             <div class="col s12 m6">
-                <div class="card">
+                <div class="card request-card">
                     <div class="card-content grey-darken-3-text">
                         <span class="card-title">Become a Volunteer</span>
                         <p>Volunteering will give you the chance to create the kind of community you would like to live
@@ -148,7 +148,7 @@
                             little help. Our volunteer experiences are varied, so you will find something that will be
                             a good fit for your availabilty and interests.</p>
                     </div>
-                    <div class="card-action">
+                    <div class="card-action" style="border:none">
                         <a class="waves-effect waves-light btn modal-trigger" href="#modal2"
                             id="volunteer-btn">Sign-up!</a>
                     </div>
