updated article card font sizes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -109,7 +109,7 @@
     <div class="row">
       <h6>As a female-led team, our goal is to raise awareness on a variety of women's issues and advocate for women’s
         health & safety. We provide a safe environment for women and other marginalized groups to find information and ask
-        for non-emergency assistance from their community. We see a world where all of our neighbors have access to
+        for non-emergency assistance from their community. We see a world where all of our neighbors have access to a
         supportive community, one where everyone works together to help one another. Our mission is to enhance the lives of
         those in need by offering our compassion, skills and services to all.
       </h6>
