--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -45,19 +45,18 @@
 
 {{!-- Image Banner --}}
 <div class="row" id="categories-image-section">
-  {{#if category == "mind-body"}}
+  {{#render_category "mind-body" category}}
      {{> partials/mind-body}}
-     {{else}}
-  <div class="col s6 m6" id="image-div1">
-    <img src="/images/parenting2.jpg" id="categories-image-banner">
-  </div>
-  <div class="hero-text" id="categories-hero-text">
-    <h3>Family & Parenting</h3>
-  </div>
-  <div class="col s6 m6" id="image-div2">
-    <img src="/images/parenting3.jpg" id="categories-image-banner2">
-  </div>
-  {{/if}}
+  {{/render_category}}
+<!--  <div class="col s6 m6" id="image-div1">-->
+<!--    <img src="/images/parenting2.jpg" id="categories-image-banner">-->
+<!--  </div>-->
+<!--  <div class="hero-text" id="categories-hero-text">-->
+<!--    <h3>Family & Parenting</h3>-->
+<!--  </div>-->
+<!--  <div class="col s6 m6" id="image-div2">-->
+<!--    <img src="/images/parenting3.jpg" id="categories-image-banner2">-->
+<!--  </div>-->
 </div>
 
 {{!-- Hero Banner --}}
