user form added, 2 other forms removed

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -118,7 +118,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12">
                 <div class="card request-card">
                     <div class="card-content grey-darken-3-text">
                         <span class="card-title">Create a User Account</span>
@@ -259,6 +259,7 @@
                 </div>
             </div>
             <div class="row append-h6">
+                <h6>What activity are you interested in?</h6>
                 <div class="col s12" id="append-radios-checkmarks"></div>
             </div>
             <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
