--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,37 +8,37 @@
 
       <div class="category-btn" id="mind">
         <div class="col s2">
-          <a href="/api/categories/women&body">Mind & Body</a>
+          <a href="/categories/women-mind-body">Mind & Body</a>
         </div>
       </div>
 
       <div class="category-btn" id="love">
         <div class="col s2">
-          <a href="/api/categories/intimacy">Love & Intimacy</a>
+          <a href="/categories/intimacy">Love & Intimacy</a>
         </div>
       </div>
 
       <div class="category-btn" id="fertility">
         <div class="col s2">
-          <a href="/api/categories/pregnancy">Fertility & Pregnancy</a>
+          <a href="/categories/pregnancy">Fertility & Pregnancy</a>
         </div>
       </div>
 
       <div class="category-btn" id="family">
         <div class="col s2">
-          <a href="/api/categories/parenting">Family & Parenting</a>
+          <a href="/categories/parenting">Family & Parenting</a>
         </div>
       </div>
 
       <div class="category-btn" id="health">
         <div class="col s2">
-          <a href="/api/categories/women&health">Women’s Health</a>
+          <a href="/categories/women&health">Women’s Health</a>
         </div>
       </div>
 
       <div class="category-btn" id="work">
         <div class="col s2">
-          <a href="/api/categories/women-in-the-workplace">Women in the Workplace</a>
+          <a href="/categories/women-in-the-workplace">Women in the Workplace</a>
         </div>
       </div>
 
@@ -108,7 +108,7 @@
     
     <div class="row">
       <h6>As a female-led team, our goal is to raise awareness on a variety of women's issues and advocate for women’s
-        health & safety. We provide a safe environment for women and other marginalized groups to find information and ask
+        health and safety. We provide a safe environment for women and other marginalized groups to find information and ask
         for non-emergency assistance from their community. We see a world where all of our neighbors have access to a
         supportive community, one where everyone works together to help one another. Our mission is to enhance the lives of
         those in need by offering our compassion, skills and services to all.
