--- a/views/partials/mind-body.handlebars
+++ b/views/partials/mind-body.handlebars
@@ -1,4 +1,5 @@
 {{!-- Mind & Body Image Banner --}}
+
 <div class="row" id="categories-image-section">
   <div class="col s6 m6" id="image-div1">
     <img src="/images/mind-body.jpg" id="categories-image-banner">
@@ -9,4 +10,12 @@
   <div class="col s6 m6" id="image-div2">
     <img src="/images/mind-body2.jpg" id="categories-image-banner2">
   </div>
-</div>3
+</div>
+
+{{!-- Related Articles Section --}}
+<div class="row results-header">
+    <div class="col s12 center-align">
+        <h5>Related Articles</h5>
+        <hr align="center" width="30%">
+    </div>
+</div>
