added category page links to slider images

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,41 +49,53 @@
   <div class="slider">
     <ul class="slides">
       <li>
+        <a href="/categories/women-mind-body">
         <img src="/images/mind-body.jpg">
         <div class="caption center-align">
           <h3>Mind & Body</h3>
         </div>
+        </a>
       </li>
       <li>
+        <a href="/categories/intimacy">
         <img src="/images/love-intimacy.jpg">
         <div class="caption center-align">
           <h3>Love & Intimacy</h3>
         </div>
+        </a>
       </li>
       <li>
+        <a href="/categories/pregnancy">
         <img src="/images/pregnancy.jpg">
         <div class="caption center-align">
           <h3>Fertility & Pregnancy</h3>
         </div>
+        </a>
       </li>
       <li>
+        <a href="/categories/parenting">
         <img src="/images/parenting.jpg">
         <div class="caption center-align">
           <h3>Family & Parenting</h3>
         </div>
+        </a>
       </li>
       <li>
+        <a href="/categories/women&health">
         <img src="/images/womens-health.jpg">
         <div class="caption center-align">
           <h3>Women's Health</h3>
         </div>
+        </a>
       </li>
 
       <li>
+        <a href="/categories/women-in-the-workplace">
         <img src="/images/women-working.jpg">
         <div class="caption center-align">
           <h3>Women in the Workplace</h3>
         </div>
+        </a>
       </li>
     </ul>
   </div>
