--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -8,9 +8,10 @@
             <strong>ID</strong>: {{user.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{user.first_name}}</p>
+            <strong>First Name: </strong> {{user.first_name}}</p>
           <p>
-            <strong>Description:</strong> {{user.last_name}}</p>
+            <strong>Last Name: </strong> {{user.last_name}}</p>
+            <br>
             <a href="/">← Back To Home</a>
         </div>
       </div>
