--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -144,7 +144,7 @@
           </p>
         </div>
         <div class="card-action" style="border:none">
-          <a class="waves-effect waves-light btn modal-trigger" href="/categories" id="card-btn">Learn More</a>
+          <a class="waves-effect waves-light btn modal-trigger" href="/categories/category" id="card-btn">Learn More</a>
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
   <div class="container results-body">
     <div class="row">
       {{#each result}}
-      <div class="col s12 m6 l6 article-card">
+      <div class="col s12 m6 l4 article-card" id="index-articles">
         <a target="blank" href="{{this.url}}">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
