--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/services">Services</a></li>
-        <li><a href="/categories">Categories</a></li>
+        <li><a href="/categories/category">Categories</a></li>
       </ul>
       <ul id="nav-mobile" class="right">
         <li>
