--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -165,6 +165,7 @@ h5 {
 .article-card {
   margin-bottom: 50px;
   -webkit-box-shadow: none;
+  height: 360px;
 }
 
 .article-card p {
@@ -174,6 +175,15 @@ h5 {
 .article-card h6 {
   font-size: 18px;
   line-height: 1.2;
+}
+
+#urlImage img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #request_volunteer {
@@ -202,6 +212,13 @@ h5 {
 
 .modal-content h4 {
   color: rgb(105, 105, 105);
+}
+
+#urlImage {
+  width: 100%;
+  padding-bottom: 50%;
+  overflow: hidden;
+  position: relative;
 }
 
 /* ==================================== Footer ==================================== */
