--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -36,7 +36,7 @@
 
         <div class="row">
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/babysitting.jpg">
                     </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/errands2.jpg">
                     </div>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/groceries2.jpg">
                     </div>
@@ -62,7 +62,7 @@
         </div>
         <div class="row">
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/houseprojects.jpg">
                     </div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/housekeeping.jpg">
                     </div>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/petcare.jpg">
                     </div>
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/transportation.jpg">
                     </div>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/yardwork2.jpg">
                     </div>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card" id="service_image">
+                <div class="card">
                     <div class="card-image">
                         <img src="/images/moving.jpg">
                     </div>
