added id to index article cards and removed request/volunteer sign-up section in services hb

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -200,7 +200,7 @@
       <div class="col s12 m6 l4 article-card" id="index-articles">
         <a target="blank" href="{{this.url}}">
         <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
+          <div class="card-image" id="urlImage">
             <img src="{{this.urlToImage}}" alt="article"></div>
         </div>
           <div class="card-content center-align">
