updated ID for services-hero-text

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -141,7 +141,7 @@
 
         <div class="row">
             <div class="hero-image" id="services-hero-image">
-                <p id="request_volunteer">If you need more information or have questions, please click on the purple chat icon to your right!</p>
+                <p id="services-hero-text">If you need more information or have questions, please click on the purple chat icon to your right!</p>
             </div>
         </div>
     </div>
