tried changing dataypes on models to get radio btn data that was pushed to a hidden div, no success

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -201,7 +201,7 @@ h5 {
   transform: translate(-50%,-50%);
 }
 
-#request-btn, #volunteer-btn {
+#request-btn, #volunteer-btn, .delete-user {
   background-color: #70597C;
 }
 
