--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -244,6 +244,13 @@
             <div class="row">
                 <h6>Do you want to volunteer or request services:</h6>
                 <div class="col s12">
+                    <div style="visibility: hidden; display: none;">
+                        <p>
+                            <label>
+                                <input id="hidden-div-role" type="text" name="role">
+                            </label>
+                        </p>
+                    </div>
                     <p>
                         <label>
                             <input id="volunteer-chosen" class="with-gap" name="role" type="radio" />
@@ -267,32 +274,32 @@
     </div>
 </div>
 
-{{!-- List of all Users --}}
-
-<div class="row">
-    <div class="col s12">
-
-        {{!-- <form class="clearfix s12" action="POST">
-            <div class="form-group">
-                <label for="user-name">User Name</label>
-                <input type="text" id="user-name" class="form-control" aria-describedby="first_name"
-                    placeholder="Enter your name...">
-            </div>
-            <button id="submit_user" class="btn btn-primary float-right">Submit</button>
-        </form> --}}
-
-        <h3>Users:</h3>
-        <ul id="users-list" class="list-group">
-            {{#each users}}
-            <li data-user-id="{{this.id}}" class="list-user-item">
-                <a href="user/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>
-                <button class="btn btn-danger float-right delete-user">ｘ</button>
-            </li>
-            {{/each}}
-        </ul>
-
+        {{!-- List of all Users --}}
+    
+    <div class="row">
+        <div class="col s12">
+    
+            {{!-- <form class="clearfix s12" action="POST">
+                <div class="form-group">
+                    <label for="user-name">User Name</label>
+                    <input type="text" id="user-name" class="form-control" aria-describedby="first_name"
+                        placeholder="Enter your name...">
+                </div>
+                <button id="submit_user" class="btn btn-primary float-right">Submit</button>
+            </form> --}}
+    
+            <h3>Users:</h3>
+            <ul id="users-list" class="list-group">
+                {{#each users}}
+                <li data-user-id="{{this.id}}" class="list-user-item">
+                    <a href="user/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>
+                    <button class="btn btn-danger float-right delete-user">ｘ</button>
+                </li>
+                {{/each}}
+            </ul>
+    
+        </div>
     </div>
-</div>
 
     {{!-- example code below --}}
     {{!-- <div class="row">
