fixed bug in apiRoutes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -140,7 +140,7 @@
                   <h6>What activity are you interested in?</h6>
                   <div class="col s12" id="append-radios-checkmarks"></div>
                 </div>
-                <a class="modal-close waves-effect waves-light btn" id="submit-user2">Submit</a>
+                <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
               </form>
             </div>
           </div>
